Fixed bug with header text size on smallest screen size

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ nav{
 }
 
 .font-xxl{
-    font-size: xx-large;
+    font-size: large;
 }
 
 .font-lg{
@@ -90,8 +90,8 @@ nav{
 
 .avatar {
     vertical-align: middle;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
  }
 
@@ -104,4 +104,14 @@ nav{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
+  }
+
+  @media screen and (min-width: 992px) {
+    .font-xxl{
+        font-size: xx-large;
+    }
+    .avatar{
+        width: 50px;
+        height: 50px;
+    }
   }
